tests/smt2/error/arg_mismatch.smt2
(declare-fun f () Bool)
(assert (f true))